cleaning up CSS

--- a/assets/package.json
+++ b/assets/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
     "tailwindcss": "^2.2.19",
-    "autoprefixer": "^10.4.0",
     "postcss": "^8.3.11",
+    "postcss-import": "^14.0.2",
+    "postcss-preset-env": "^6.7.0",
     "topbar": "^1.0.1"
   },
   "scripts": {
