--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -50,16 +50,6 @@ jobs:
           key: ${{ runner.OS }}-build-${{ github.sha }}
           restore-keys: |
             ${{ runner.OS }}-build-
-      - name: Check for Unused Dependencies
-        run: mix deps.unlock --check-unused
-      - name: Compile Dependencies
-        run: mix deps.compile
-      - name: Compile App
-        run: mix compile --warnings-as-errors
-      - name: Check Formatting
-        run: mix format --check-formatted
-      - name: Run Credo
-        run: mix credo --strict
       - name: Retrieve PLT Cache
         uses: actions/cache@v1
         id: plt-cache
@@ -71,7 +61,5 @@ jobs:
         run: |
           mkdir -p priv/plts
           mix dialyzer --plt
-      - name: Run dialyzer
-        run: mix dialyzer --no-check --halt-exit-status
-      - name: Run Tests
-        run: mix test
+      - name: Run `mix check`
+        run: mix check
