--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -50,10 +50,6 @@ jobs:
           key: ${{ runner.OS }}-build-${{ github.sha }}
           restore-keys: |
             ${{ runner.OS }}-build-
-      - name: Compile Dependencies
-        run: mix deps.compile
-      - name: Compile App
-        run: mix compile
       - name: Retrieve PLT Cache
         uses: actions/cache@v1
         id: plt-cache
@@ -65,3 +61,5 @@ jobs:
         run: |
           mkdir -p priv/plts
           mix dialyzer --plt
+      - name: mix check
+        run: mix check
