--- a/assets/package.json
+++ b/assets/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
-    "tailwindcss": "^2.2.19",
+    "@tailwindcss/aspect-ratio": "^0.3.0",
     "postcss": "^8.3.11",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^2.2.19",
     "topbar": "^1.0.1"
   },
   "scripts": {
